objects/FieloEE__PointAudit__c.object
<CustomObject>
    <fields>
        <fullName>FieloEE__PointAge__c</fullName>
        <formula>(FieloEE__RedemptionPoints__r.CreatedDate - FieloEE__TransactionPoints__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionPoints__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption Points</label>
        <referenceTo>FieloEE__Point__c</referenceTo>
        <relationshipLabel>Redeemed Points Detail</relationshipLabel>
        <relationshipName>RedemptionPoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__TransactionPoints__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Points</label>
        <referenceTo>FieloEE__Point__c</referenceTo>
        <relationshipLabel>Used Points Detail</relationshipLabel>
        <relationshipName>PointsAudit</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Point Audit</label>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>